--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 body {
   background-color: #f3f3f3;
 }
+body .block {
+  width: 40%;
+  margin: 10vh auto 0;
+  border: 1px solid black;
+  text-align: center;
+}
 body .widget {
   position: fixed;
   right: 50px;
