--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,13 @@
 body {
     background-color: #f3f3f3;
 
+    .block{
+        width: 40%;
+        margin: 10vh auto 0;
+        border: 1px solid black;
+        text-align: center;
+    }
+
     .widget {
 
         position: fixed;
