--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 body .block {
   width: 40%;
-  height: 70vh;
+  height: auto;
   margin: 10vh auto 0;
   border: 1px solid black;
   text-align: center;
