--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@ body {
 
     .block{
         width: 40%;
-        height: 70vh;
+        height: auto;
         margin: 10vh auto 0;
         border: 1px solid black;
         text-align: center;
