--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,9 @@ body {
             height: 100%;
             object-fit: contain
         }
+        #first-img{
+            width: 50%;
+        }
     }
 
     .widget {
